--- a/index.html
+++ b/index.html
@@ -4,16 +4,77 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BUZZ ON</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="buzz ON">
+  <meta property="og:url" content="http://www.buzzon.co.kr">
+  <meta property="og:description" content="Buzz On">
+  <meta property="og:image" content="./src/img/common/img-share.png">
+  <link rel="short cut icon" type="image/x-icon" href="./src/img/icon/favicon.png">
+  <title>buzz ON</title>
+
   <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
 <body>
   <div id="wrap">
+    <div id="header" class="intro-page">
 
+    </div>
 
-    <h1>Hello BUZZ</h1>
+    <div id="main" class="intro-page">
+      <section class="intro-section">
+        <div class="section-wrap">
+          <!-- <div class="section-wrap-inner flex-center"> -->
+          <div class="section-wrap-inner">
+            <div class="section-content">
+              <h1 class="logo"><a href="#"><img src="./src/img/common/logo.png" alt="buzzON logo"></a></h1>
+              <div class="intro-search">
+                <input type="text" id="introSearch" placeholder="검색어를 입력하세요">
+                <label for="introSearch">검색어를 입력하세요</label>
+              </div>
+
+              <div class="intro-login">
+                <button id="introLogin" class="login-btn now-on">로그인</button>
+                <button id="introLogout" class="logout-btn">로그아웃</button>
+              </div>
+
+              <div class="intro-login-option">
+                <p class="id-remember">
+                  <input id="idRemember" type="checkbox">
+                  <label for="idRemember">아이디 기억하기</label>
+                </p>
+                <p class="find-user-info">
+                  <a href="#">아이디/비밀번호 찾기</a>
+                </p>
+                <p class="join-us">
+                  <a id="joinUs" href="#">회원가입</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+      <section class="content-section section-sample">
+        <div class="section-wrap">
+          <div class="section-wrap-inner">
+            <div class="section-title">
+              <h3>연관어 순위 변화</h3>
+              <span class="title-more"><a href="#">더 보기</a></span>
+            </div>
+            <div class="section-content">
+              Hello buzzON
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div id="footer" class="home-page">
+
+    </div>
   </div>
 </body>
 
