--- a/now.html
+++ b/now.html
@@ -29,7 +29,7 @@
           <!-- <div class="section-wrap-inner flex-center"> -->
           <!-- <div class="section-wrap-inner"> -->
           <div class="section-content">
-            <h1 class="logo"><a href="./now.html"><img src="./src/img/common/logo.png" alt="buzzON logo"></a></h1>
+            <h1 class="logo"><a href="#"><img src="./src/img/common/logo.png" alt="buzzON logo"></a></h1>
             <div class="intro-search">
               <input type="text" id="introSearch" placeholder="검색어를 입력하세요">
               <!-- <label for="introSearch">검색어를 입력하세요</label> -->
