--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div id="wrap">
-    <div id="header" class="intro-page">
+    <div id="header" class="intro-page" style="display:none;">
 
     </div>
 
@@ -204,7 +204,7 @@
       </section>
     </div>
 
-    <div id="footer" class="home-page">
+    <div id="footer" class="intro-page">
 
     </div>
   </div>
