--- a/now.html
+++ b/now.html
@@ -19,192 +19,159 @@
 
 <body>
   <div id="wrap">
-    <div id="header" class="intro-page">
+    <div id="header" class="contents-page now-page">
 
     </div>
 
-    <div id="main" class="intro-page">
-      <section class="intro-section">
+    <div id="main" class="contents-page now-page">
+      <section class="tab-section">
         <div class="section-inner">
-          <!-- <div class="section-wrap-inner flex-center"> -->
-          <!-- <div class="section-wrap-inner"> -->
-          <div class="section-content">
-            <h1 class="logo"><a href="#"><img src="./src/img/common/logo.png" alt="buzzON logo"></a></h1>
-            <div class="intro-search">
-              <input type="text" id="introSearch" placeholder="검색어를 입력하세요">
-              <!-- <label for="introSearch">검색어를 입력하세요</label> -->
-              <p class="search-btn"></p>
+          <article class="tab-article ">
+            <div class="article-inner">
+              <div class="tab-wrap">
+                <ul class="tab-list">
+                  <li class="tab-item tab-now now-on"><a href="./now.html">NOW</a></li>
+                  <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
+                  <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
+                </ul>
+                <ul class="tab-info-list">
+                  <li class="tab-info-item tab-now now-on">
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 <br>소개하는 문구가 삽입됩니다.
+                  </li>
+                  <li class="tab-info-item tab-trend">
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                  </li>
+                  <li class="tab-info-item tab-hottest">
+                    이곳은 <em class="txt-highlight">각 카테고리별 특징</em>을 간략하게 소개하는 문구가 삽입됩니다.
+                  </li>
+                </ul>
+              </div>
             </div>
+          </article>
 
-            <div class="intro-login">
-              <button id="introLogin" class="login-btn now-on">로그인</button>
-              <button id="introLogout" class="logout-btn">로그아웃</button>
+          <article class="content-article tab-title-article width-2-1 fl-r">
+            <div class="article-inner">
+              <div class="article-content">
+                <p class="tab-title">
+                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트<br> <strong
+                    class="txt-num txt-highlight">30,000</strong> 건을 발견하였습니다.
+                </p>
+              </div>
             </div>
-
-            <div class="intro-login-option clearFix">
-              <p class="id-remember">
-                <input id="idRemember" type="checkbox">
-                <label for="idRemember">아이디 기억하기</label>
-              </p>
-              <p class="find-user-info">
-                <a href="#">아이디/비밀번호 찾기</a>
-              </p>
-              <p class="join-us">
-                <a id="joinUs" href="#">회원가입</a>
-              </p>
-            </div>
-          </div>
-          <!-- </div> -->
+          </article>
         </div>
       </section>
 
       <section class="content-section">
         <div class="section-inner">
-          <article class="content-article article-buzz-news width-3-2 fl-l">
+          <article class="content-article article-engagement">
             <div class="article-inner">
               <div class="article-title">
-                <h3>버즈메트릭스 뉴스레터</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
+                <h3><img src="./src/" class="title-icon" alt=""> ENGAGEMENT</h3>
               </div>
               <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="thumb-list">
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2202.png" alt="버즈메트릭스 22년 02월 뉴스"></div>
-                        <p class="thumb-title">2022년 2월호 가상인간</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2112.png" alt="버즈메트릭스 21년 12월 뉴스"></div>
-                        <p class="thumb-title">2021년 12월호 밀키트</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/buzz_2111.png" alt="버즈메트릭스 21년 11월 뉴스"></div>
-                        <p class="thumb-title">2022년 2월호 숏폼</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </article>
+                <div class="article-chart-wrap main-chart-wrap">
 
-          <article class="content-article article-youtube-hot width-3-2 fl-l">
-            <div class="article-inner">
-              <div class="article-title">
-                <h3>유튜브 인기 동영상</h3>
-                <span class="title-more"><a href="#">더 보기</a></span>
-              </div>
-              <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="thumb-list">
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_001.jpg" alt="버즈메트릭스 22년 02월 뉴스"></div>
-                        <p class="thumb-title">[애쉬스 게임 리뷰] 짱구는 못말려! 나와 박사님의 여름방학 ~끝나지 않는 7일간의 여행~ 전격 리뷰!!!</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_002.jpg" alt="버즈메트릭스 21년 12월 뉴스"></div>
-                        <p class="thumb-title">내가 더이상 통신사에서 폰을 안사는 이유. 훨씬 저렴한 자급제+알뜰폰 조합 장단점?</p>
-                      </a>
-                    </li>
-                    <li class="thumb-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <div class="thumb-img"><img src="./src/img/main/youtube_003.jpg" alt="버즈메트릭스 21년 11월 뉴스"></div>
-                        <p class="thumb-title">『별의 커비 디스커버리』 소개 영상</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </article>
-
-          <article class="content-article article-keyword-now intro-keyword-now width-3-1 po-r">
-            <div class="article-inner">
-              <div class="article-title">
-                <h3><b class="txt-gr">뜨고 있는</b> 키워드</h3>
-                <span class="title-date">22.02.22일 기준</span>
-              </div>
-              <div class="article-content">
-                <div class="article-list-wrap">
-                  <ul class="rank-list">
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">1위</p>
-                        <span class="item-title">소득세</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">2위</p>
-                        <span class="item-title">갈등</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">3위</p>
-                        <span class="item-title">기본소득</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">4위</p>
-                        <span class="item-title">대선</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">5위</p>
-                        <span class="item-title">공천</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">6위</p>
-                        <span class="item-title">카카오</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">7위</p>
-                        <span class="item-title">SKT</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">8위</p>
-                        <span class="item-title">메타버스</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">9위</p>
-                        <span class="item-title">디지털자산</span>
-                      </a>
-                    </li>
-                    <li class="rank-item">
-                      <a href="#" class="link-area" target="_blank">
-                        <p class="item-standing">10위</p>
-                        <span class="item-title">NFT</span>
-                      </a>
-                    </li>
-                  </ul>
                 </div>
               </div>
             </div>
           </article>
         </div>
       </section>
+
+      <section class="content-section">
+        <div class="section-inner">
+          <article class="content-article article-channel-details">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> CHANNEL DETAILS</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="content-section">
+        <div class="section-inner">
+          <article class="content-article article-sentiment width-3-1">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article article-sentiment-channels width-3-2">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT BY CHANNELS</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="content-section">
+        <div class="section-inner">
+          <article class="content-article article-sentiment-keyword width-4-1">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> SENTIMENT KEYWORD</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article article-keyword-association width-4-2">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> KEYWORD ASSOCIATION</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+
+          <article class="content-article article-keyword-ranking width-4-1">
+            <div class="article-inner">
+              <div class="article-title">
+                <h3><img src="./src/" class="title-icon" alt=""> KEYWORD RANKING</h3>
+              </div>
+              <div class="article-content">
+                <div class="article-chart-wrap -wrap">
+
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
+
     </div>
 
-    <div id="footer" class="home-page">
+    <div id="footer" class="contents-page now-page">
 
     </div>
   </div>
