--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <span class="title-date">22.02.22일 기준</span>
               </div>
               <div class="article-content">
-                <div class="article-list-wrap">
+                <div class="article-rank-wrap">
                   <ul class="rank-list">
                     <li class="rank-item">
                       <a href="#" class="link-area" target="_blank">
