--- a/hottest.html
+++ b/hottest.html
@@ -53,8 +53,10 @@
             <div class="article-inner">
               <div class="article-content">
                 <p class="tab-title">
-                  검색하신 키워드 <strong class="txt-highlight">"베개"</strong>와 관련된 포스트<br> <strong
-                    class="txt-num txt-highlight">30,000</strong> 건을 발견하였습니다.
+                  검색하신 키워드 <strong class="txt-sizeP">"베개"</strong>의 가장 핫한 포스트는<br><strong
+                    class="txt-sizeP">"유튜브"</strong>의 <strong class="txt-sizeP">"나랏말싸미 듕긕에
+                    달아 문자와로 서르 사맛디 문장 더 길게길게
+                    아니할쎄"</strong>입니다.
                 </p>
               </div>
             </div>
@@ -70,8 +72,57 @@
                 <h3 class="add-icon">HOTTEST CAFES</h3>
               </div>
               <div class="article-content">
-                <div class="article-chart-wrap main-chart-wrap">
-
+                <div class="article-hottest-wrap">
+                  <ul class="hottest-list">
+                    <li class="hottest-item item-title">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">카페명</p>
+                        <span class="item-post-num">게시글 수</span>
+                        <span class="item-engagement">건수</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">베개 쓰는 사람들</p>
+                        <span class="item-post-num">15,471</span>
+                        <span class="item-engagement">15,471</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">피겨를 사랑하는 사람들</p>
+                        <span class="item-post-num">15,221</span>
+                        <span class="item-engagement">15,221</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">베개를 위하여</p>
+                        <span class="item-post-num">12,117</span>
+                        <span class="item-engagement">12,117</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">죽음을 먹는 자들</p>
+                        <span class="item-post-num">10,227</span>
+                        <span class="item-engagement">10,227</span>
+                      </div>
+                    </li>
+                    <li class="hottest-item item-subs">
+                      <span class="icon-area"></span>
+                      <div class="contents-area">
+                        <p class="item-name">맥 쓰는 사람들</p>
+                        <span class="item-post-num">9,471</span>
+                        <span class="item-engagement">9,471</span>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
