--- a/header.html
+++ b/header.html
@@ -1,11 +1,11 @@
 <header>
   <div class="header-inner clearFix">
-    <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.png" alt="buzzOn logo"></a></h1>
+    <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
     <p class="mobile-menu-btn">
       <a href="#" class="link-area">
-        <span class="menu-dot"></span>
-        <span class="menu-dot"></span>
-        <span class="menu-dot"></span>
+        <span class="menu-line line-1"></span>
+        <span class="menu-line line-2"></span>
+        <span class="menu-line line-3"></span>
       </a>
     </p>
     <button class="search-slide-btn"></button>
