--- a/header.html
+++ b/header.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="user-area">
-      <a href="#" class="link-area">
+      <a href="./userPreset.html" class="link-area">
         <p class="user-profile"></p>
         <span class="user-name">야무진진눈깨비</span>
       </a>
